Fix environment files and update to Node 20

--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,10 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Environment files with sensitive data
-src/environments/environment.ts
-src/environments/environment.production.ts
-src/environments/*.local.ts
+# # Environment files with sensitive data
+# src/environments/environment.ts
+# src/environments/environment.production.ts
+# src/environments/*.local.ts
 
 # Environment template is okay to commit
 !src/environments/environment.template.ts
